# plan_to_podcast

./: pyproject.toml  requirements.txt
plan_to_podcast/: constants.py  generate_podcast.py  step_tts.py  utils.py  voice_manager.py  voice_ui.py
src/: app.py  step_tts.py  voice_ui.py
